--- a/sfmc-servicecloud-customsplit/package.json
+++ b/sfmc-servicecloud-customsplit/package.json
@@ -10,7 +10,7 @@
 		"body-parser": "^1.17.1",
 		"express": "^4.15.2",
 		"jsforce": "^1.7.1",
-		"jsonwebtoken": "^7.4.0"
+		"jsonwebtoken": ""
 	},
 	"options": {
 		"salesforce": {
@@ -20,7 +20,7 @@
 				"loginUrl": "https://login.salesforce.com"
 			},
 			"marketingCloud": {
-				"jwtSecret": "jb-custom-split"
+				"jwtSecret": ""
 			}
 		}
 	}
